[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/img/background/Background/Sky(1.1).png" type="Texture" id=2]
[ext_resource path="res://src/ButtonChangeScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/Director.gd" type="Script" id=4]
[ext_resource path="res://src/Theme.tres" type="Theme" id=5]
[ext_resource path="res://src/scenes/GameScene.gd" type="Script" id=6]
[ext_resource path="res://assets/img/background/Background/Moon(1.1).png" type="Texture" id=7]
[ext_resource path="res://default_env.tres" type="Environment" id=8]
[ext_resource path="res://assets/img/light.png" type="Texture" id=9]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.254545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1970.94, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 29.3654, 1116.47 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ -767.576 ]
}
music = "res://assets/bgm/Casket_of_Star__Astral_Burial.ogg"

[node name="Trail" type="Line2D" parent="."]
width = 50.0
width_curve = SubResource( 1 )
default_color = Color( 0.45098, 0, 0, 0.470588 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Walls" type="Node2D" parent="."]

[node name="N" type="StaticBody2D" parent="Walls"]
position = Vector2( 1928.51, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/N"]
shape = SubResource( 2 )

[node name="E" type="StaticBody2D" parent="Walls"]
position = Vector2( 3840, 1083.59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/E"]
shape = SubResource( 3 )

[node name="W" type="StaticBody2D" parent="Walls"]
position = Vector2( 0, 1083.59 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/W"]
shape = SubResource( 3 )

[node name="S" type="StaticBody2D" parent="Walls"]
position = Vector2( 1928.51, 2160 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/S"]
shape = SubResource( 2 )

[node name="Director" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 3235.6, 1724.4 )

[node name="Bullets" type="Node2D" parent="." groups=[
"node_bullets",
]]
position = Vector2( 0, -1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scroll_limit_end = Vector2( 3840, 2160 )
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.01, 0.01 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 7, 5 )
texture = ExtResource( 2 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( 1.52588e-05, 7.62939e-06 )
texture = ExtResource( 7 )

[node name="Light2D" type="Light2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2( -705.342, -446.151 )
texture = ExtResource( 9 )

[node name="DeathScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="DeathScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 0.67451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="DeathScreen/ColorRect"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen/ColorRect/MarginContainer"]
margin_top = 75.0
margin_right = 1152.0
margin_bottom = 573.0
size_flags_vertical = 4
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DeathScreen/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 1152.0
margin_bottom = 134.0
text = "GAME_OVER"
align = 1

[node name="Control" type="Control" parent="DeathScreen/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 1152.0
margin_bottom = 166.0
size_flags_vertical = 3

[node name="ButtonRetry" parent="DeathScreen/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 198.0
margin_right = 1152.0
margin_bottom = 332.0
focus_neighbour_bottom = NodePath("../ButtonMainMenu")
text = "RETRY"
path = "res://src/scenes/GameScene.tscn"

[node name="ButtonMainMenu" parent="DeathScreen/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 364.0
margin_right = 1152.0
margin_bottom = 498.0
focus_neighbour_top = NodePath("../ButtonRetry")
text = "MAIN_MENU"
path = "res://src/scenes/MainMenu.tscn"

[node name="PauseScreen" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0, 0, 0, 0.67451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PauseScreen/ColorRect"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen/ColorRect/MarginContainer"]
margin_top = 8.0
margin_right = 1152.0
margin_bottom = 640.0
size_flags_vertical = 4
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseScreen/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 1152.0
margin_bottom = 139.0
text = "PAUSE"
align = 1

[node name="ButtonContinue" type="Button" parent="PauseScreen/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 1152.0
margin_bottom = 310.0
text = "CONTINUE"

[node name="ButtonRetry" parent="PauseScreen/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 342.0
margin_right = 1152.0
margin_bottom = 481.0
focus_neighbour_top = NodePath("../ButtonContinue")
focus_neighbour_bottom = NodePath("../ButtonMainMenu")
text = "RETRY"
path = "res://src/scenes/GameScene.tscn"

[node name="ButtonMainMenu" parent="PauseScreen/ColorRect/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 513.0
margin_right = 1152.0
margin_bottom = 652.0
focus_neighbour_top = NodePath("../ButtonRetry")
text = "MAIN_MENU"
path = "res://src/scenes/MainMenu.tscn"

[node name="Tutorial" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Tutorial"]
visible = false
anchor_top = 0.856
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Tutorial/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Tutorial"
align = 1
valign = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 8 )
[connection signal="pressed" from="PauseScreen/ColorRect/MarginContainer/VBoxContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
